<resources>
    <string name="app_name">Submission_intermediete_dicoding</string>
    <string name="login">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tab_text_1">My List</string>
    <string name="tab_text_2">Other List</string>
    <string name="hi_total_story_anda_14_story">Hi ! your total story %1$d story</string>
    <string name="selamat_datang">Welcome, %1$s</string>
    <string name="email_user">Email User</string>
    <string name="total_story_yang_anda_upload_adalah_story">The total story you upload is %1$d story</string>
    <string name="develop_by_wijang_afdholanabil_kusuma">Develop By Wijang Afdholanabil Kusuma</string>
    <string name="logout">Logout</string>
    <string name="image_onboard1">Image OnBoard1</string>
    <string name="next">Next</string>
    <string name="desc_onBoard1">Hello, StoryQ is the app that contain a story of people</string>
    <string name="finish">Finish</string>
    <string name="desc_onBoard2">You can make your own story in this app. Feel free to explore</string>
    <string name="background_image">Background Image</string>
    <string name="desc_first_Board1">I already have an account</string>
    <string name="create_new_account">Create new account</string>
    <string name="login_here">Login here</string>
    <string name="welcome_back_you_ve_been_missed">Welcome back you\'ve been missed!</string>
    <string name="create_account">Create Account</string>
    <string name="create_an_account_so_you_can_make_and_explore_all_the_existing_story">Create an account so you can make and explore all the existing story</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="connect_the_other">CONNECT WITH OTHER</string>
    <string name="let_create_an_untold_story">Let Create an Untold Story</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="name">Name</string>
    <string name="add_story">add_story</string>
    <string name="take_picture">Take picture</string>
    <string name="swift_camera">Swift camera</string>
    <string name="username">Username</string>
    <string name="image_profile">Image profile</string>
    <string name="image_contain">Image Contain</string>
    <string name="description">Description</string>
    <string name="change_image">Change Image</string>
    <string name="gallery">Gallery</string>
    <string name="add_story2">Add Story</string>
    <string name="button_back">button back</string>
    <string name="deskripsi">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ornare dolor sit amet cursus tincidunt. Quisque semper risus nulla. Fusce sit amet dictum nisl, eget gravida ex. Nam sit amet eleifend massa, mattis pulvinar nisi. Nullam fermentum suscipit pharetra. Praesent interdum feugiat malesuada. Suspendisse semper eros et ligula vehicula, sit amet gravida risus dictum. Ut quis leo sed nulla ullamcorper posuere. Mauris pretium ultricies massa ut malesuada. Proin vitae pellentesque tortor, et tristique leo. Nunc quis auctor mauris, mattis tristique metus.

Phasellus vestibulum mollis sodales. Maecenas vehicula ut tortor non tristique. Sed sed malesuada quam. Vestibulum quis efficitur diam. Maecenas eu sodales turpis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec leo magna, gravida id arcu ac, dictum elementum ligula. Duis sollicitudin dui eget metus iaculis tempor. Aenean id imperdiet metus. Nulla mollis lacus quis gravida pellentesque. Nulla congue justo semper, rutrum sem at, pretium orci. Mauris enim lectus, tincidunt id condimentum at, ullamcorper eu mauris. Proin tristique arcu sit amet lectus gravida vestibulum. Fusce dignissim felis ut nisi cursus lobortis. Donec pharetra quam quam, a condimentum urna molestie vel. Nam tristique vel ipsum id porttitor.</string>
    <string name="select_language">Select Language</string>
    <string name="error_regist_allnull">All inputs must be filled in</string>
    <string name="error_regist_konfirmNotSame">Confirm the password is not the same as your password</string>
    <string name="succes_regist">Registration Successed, Your account has been created !</string>
    <string name="error_regist_inputmusteight">The input password must be more than 8 characters!</string>
    <string name="error_regist">Failed to create your account!</string>
    <string name="error_emailNotValid">Email not valid!</string>
    <string name="anda_belum_pernah_menambahkan_cerita">You\'ve never added a story</string>
    <string name="belum_ada_cerita_untuk_anda_saat_ini">There is no story for you at this time</string>
    <string name="apple_register">apple_register</string>
    <string name="google_register">google_register</string>
    <string name="facebook_register">facebook_register</string>
    <string name="Message_notYetAvailable">The feature not yet available</string>
    <string name="myeditText_password_hint">Enter your password</string>
    <string name="story_succes_get_story">Success getting the story!</string>
    <string name="story_failed_get_story">Failed getting the story!</string>
    <string name="story_error_get_story">An error occurred while loading!</string>
    <string name="invalid_email_error">Invalid email</string>
    <string name="login_needInput">Fill all input</string>
    <string name="error_password_length">Password length must be more than 8 characters</string>
    <string name="email_hint">Enter your email</string>
    <string name="confirmPw_hint">Enter confirm password</string>
    <string name="name_hint">Enter your name</string>
    <string name="error_confirm_password">Confirm password is not the same</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="error_memuat_cerita">Error Memuat Cerita</string>
    <string name="coba_lagi">Coba Lagi</string>

</resources>