<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_profile_allStory"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_profile" />

    <TextView
        android:id="@+id/tv_name_allStory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="18sp"
        android:fontFamily="@font/intersemibold"
        app:layout_constraintStart_toEndOf="@id/iv_profile_allStory"
        app:layout_constraintTop_toTopOf="@id/iv_profile_allStory"
        app:layout_constraintBottom_toBottomOf="@id/iv_profile_allStory"
        android:layout_marginStart="10dp"/>

    <ImageView
        android:id="@+id/iv_content_allStory"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/iv_profile_allStory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/image_contain"/>

    <TextView
        android:id="@+id/tv_desc_allStory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="16sp"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/interregular"
        app:layout_constraintTop_toBottomOf="@id/iv_content_allStory"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>