<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.view.activity.RegisterActivity">

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_title_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:gravity="center"
        android:textSize="32sp"
        android:textColor="@color/p2"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/satoshiblack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_subtitle_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account_so_you_can_make_and_explore_all_the_existing_story"
        android:textSize="18sp"
        android:fontFamily="@font/satoshibold"
        app:layout_constraintTop_toBottomOf="@id/tv_title_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginTop="20dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:startIconDrawable="@drawable/profile_1"
        app:startIconTint="@color/p2"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle_register">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:startIconDrawable="@drawable/message"
        app:startIconTint="@color/p2"
        app:layout_constraintTop_toBottomOf="@id/tl_name">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/p2"
        app:startIconDrawable="@drawable/lock_1"
        app:startIconTint="@color/p2"
        app:layout_constraintTop_toBottomOf="@id/tl_email">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_confirm_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/p2"
        app:startIconDrawable="@drawable/lock_1"
        app:startIconTint="@color/p2"
        app:layout_constraintTop_toBottomOf="@id/tl_pw">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:padding="15dp"
        android:textSize="18sp"
        android:fontFamily="@font/satoshibold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tl_confirm_pw"/>

    <TextView
        android:id="@+id/tv_toLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:fontFamily="@font/satoshibold"/>

</androidx.constraintlayout.widget.ConstraintLayout>